# thunderseg

./: .gitignore  404.html  LICENSE  README.md  environment.yml  environment_dev.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: doc_ci.yml
about/: index.html
dev1/: 404.html  index.html  sitemap.xml
dev1/about/: index.html
dev1/flowchart/main_program/: index.html
dev1/getting_start/: index.html
dev1/getting_start/basic_usage/: index.html
dev1/search/: search_index.json
dev2/: 404.html  index.html  sitemap.xml
dev2/about/: index.html
dev2/flowchart/main_program/: index.html
dev2/getting_start/: index.html
dev2/getting_start/basic_usage/: index.html
dev3/: 404.html  index.html  sitemap.xml
dev3/about/: index.html
dev3/getting_start/: index.html
dev3/search/: search_index.json
docs/: index.md
docs/flowchart/: main_program.md
docs/getting_start/: basic_usage.md  index.md
getting_start/: index.html
getting_start/basic_usage/: index.html
latest/: 404.html  index.html  sitemap.xml
latest/about/: index.html
latest/getting_start/: index.html
latest/search/: search_index.json
search/: search_index.json
src/DLtreeseg/: __init__.py  main.py
src/DLtreeseg/core/: io.py  (+4 more)
src/thunderseg/: __init__.py  _version.py  main.py
test/: test.py  test_anything.py  test_detectree2.py  test_detectron2.py  test_io.py  test_lightning.py  test_main.py  test_model.py  test_preprocess.py  test_tool.py  test_torchvision.py  test_train.py  test_utils.py
(+33 files in other folders)
