[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'
[project]
name = "thunderseg"
dynamic= ["version"]
authors = [{name="Jiawei Li", email="Jiaweiliwork@outlook.com"}]
description = "A deep learning framwork focus on image segmentation"
readme = 'README.md'
dependencies = []
[tool.setuptools.dynamic]
version = {attr = "thunderseg._version.__version__"}